Windows 7 compatible test
The browser causes some issues with windows 7, so let's try without.

--- a/TrinityCreator/MainWindow.xaml
+++ b/TrinityCreator/MainWindow.xaml
@@ -71,7 +71,7 @@
                 <TabItem Header="Vendor">
                     <Frame Name="VendorCreatorTab" />
                 </TabItem>
-                <TabItem Header="Model Viewer" Name="ModelViewer" Selector.Selected="modelViewerTab_Selected">
+                <TabItem Header="Model Viewer" Name="ModelViewer" Selector.Selected="modelViewerTab_Selected" Visibility="Collapsed">
                     <Frame Name="ModelViewerTabFrame" />
                 </TabItem>
                 
