Ajout de l'emul cMangos335a & item_template done

--- a/TrinityCreator/MainWindow.xaml
+++ b/TrinityCreator/MainWindow.xaml
@@ -13,9 +13,10 @@
             </MenuItem>
 
             <MenuItem Header="Select Emulator">
-                <RadioButton Content="TrinityCore/cMangos 3.3.5a" Name="trinity335aRb" Checked="trinity335aRb_Checked"/>
+                <RadioButton Content="TrinityCore" Name="trinity335aRb" Checked="trinity335aRb_Checked"/>
                 <RadioButton Content="AzerothCore 3.3.5a" Name="azeroth335aRb" Checked="azeroth335a_Checked"/>
                 <RadioButton Content="cMangos 1.12 (UNTESTED)" Name="cMangos112Rb" Checked="cMangos112Rb_Checked"/>
+                <RadioButton Content="cMangos 3.3.5a" Name="cMangos335aRb" Checked="cMangos335aRb_Checked"/>
             </MenuItem>
 
             <MenuItem Header="Info" >
