Creature weapons for TDB335.64 #44
You can now create creatures holding weapons

--- a/TrinityCreator/CreatureCreatorPage.xaml
+++ b/TrinityCreator/CreatureCreatorPage.xaml
@@ -83,6 +83,7 @@
                         </DockPanel>
                         <Button Content="Find Model ID" Click="findCreatureBtn_Click" Margin="2"/>
                         <GroupBox Name="ModelIdGb" Header="Display IDs" Content="{Binding ModelIds, UpdateSourceTrigger=PropertyChanged}" />
+                        
                         <DockPanel Margin="2">
                             <Label Content="Mount Display ID" DockPanel.Dock="Left" Width="120" />
                             <TextBox Text="{Binding Mount}" DockPanel.Dock="Left" />
@@ -91,6 +92,26 @@
                             <Button Content="Find Emote" Click="findEmoteBtn_Click" Width="75" DockPanel.Dock="Right" Margin="2,0,0,0"/>
                             <Label Content="Repeat Emote" DockPanel.Dock="Left" Width="120" />
                             <TextBox Text="{Binding Emote}" DockPanel.Dock="Left" />
+                        </DockPanel>
+                    </StackPanel>
+                </GroupBox>
+                <GroupBox Header="Equipment" Name="equipmentGb">
+
+                    <StackPanel DockPanel.Dock="Left">
+                        <DockPanel Margin="2">
+                            <Button Content="Find Item" Click="findItemBtn_Click" Width="75" DockPanel.Dock="Right" Margin="2,0,0,0"/>
+                            <Label Content="Weapon 1" DockPanel.Dock="Left" Width="120" />
+                            <TextBox Text="{Binding Weapon1}" DockPanel.Dock="Left" />
+                        </DockPanel>
+                        <DockPanel Margin="2">
+                            <Button Content="Find Item" Click="findItemBtn_Click" Width="75" DockPanel.Dock="Right" Margin="2,0,0,0"/>
+                            <Label Content="Weapon 2" DockPanel.Dock="Left" Width="120" />
+                            <TextBox Text="{Binding Weapon2}" DockPanel.Dock="Left" />
+                        </DockPanel>
+                        <DockPanel Margin="2">
+                            <Button Content="Find Item" Click="findItemBtn_Click" Width="75" DockPanel.Dock="Right" Margin="2,0,0,0"/>
+                            <Label Content="Ranged Weapon" DockPanel.Dock="Left" Width="120" />
+                            <TextBox Text="{Binding Weapon3}" DockPanel.Dock="Left" />
                         </DockPanel>
                     </StackPanel>
                 </GroupBox>
