--- a/TrinityCreator/Tools/ProfileCreator.xaml
+++ b/TrinityCreator/Tools/ProfileCreator.xaml
@@ -14,6 +14,11 @@
                     <Button Name="copyBtn" Content="Copy Json to clipboard" Margin="5" Height="25" Click="copyBtn_Click"/>
                 </StackPanel>
             </GroupBox>
+            <GroupBox Header="Item" Width="500" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Top">
+                <StackPanel x:Name="itemSp" Orientation="Vertical">
+                    <!-- ProfileCreatorEntries go here -->
+                </StackPanel>
+            </GroupBox>
             <GroupBox Header="Loot" Width="500" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Top">
                 <StackPanel x:Name="lootSp" Orientation="Vertical">
                     <!-- ProfileCreatorEntries go here -->
