--- a/TrinityCreator/UI/DbConfigWindow.xaml
+++ b/TrinityCreator/UI/DbConfigWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="TrinityCreator.Database.DbConfigWindow"
+﻿<Window x:Class="TrinityCreator.UI.DbConfigWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
