--- a/TrinityCreator/UI/ProfileOptionControl.xaml
+++ b/TrinityCreator/UI/ProfileOptionControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="TrinityCreator.Profiles.ProfileSelectionControl"
+﻿<UserControl x:Class="TrinityCreator.UI.ProfileSelectionControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
