--- a/TrinityCreator/Tools/ProfileCreator/ProfileCreatorWindow.xaml
+++ b/TrinityCreator/Tools/ProfileCreator/ProfileCreatorWindow.xaml
@@ -8,7 +8,7 @@
         Title="ProfileCreator" Height="600" Width="1100">
     <ScrollViewer>
         <WrapPanel>
-            <GroupBox Header="Info" Width="500">
+            <GroupBox Header="Info" Width="1000">
                 <StackPanel Orientation="Vertical">
                     <TextBlock>WARNING: This tool is for advanced users. Read the documentation before using it.</TextBlock>
                     <Button Name="copyBtn" Content="Copy Json to clipboard" Margin="5" Height="25" Click="copyBtn_Click"/>
@@ -16,6 +16,11 @@
             </GroupBox>
             <GroupBox Header="Loot" Width="500" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Top">
                 <StackPanel x:Name="lootSp" Orientation="Vertical">
+                    <!-- ProfileCreatorEntries go here -->
+                </StackPanel>
+            </GroupBox>
+            <GroupBox Header="Vendor" Width="500" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Top">
+                <StackPanel x:Name="vendorSp" Orientation="Vertical">
                     <!-- ProfileCreatorEntries go here -->
                 </StackPanel>
             </GroupBox>
