--- a/TrinityCreator/Tools/ProfileCreator/ProfileCreatorSetting.xaml
+++ b/TrinityCreator/Tools/ProfileCreator/ProfileCreatorSetting.xaml
@@ -1,15 +1,14 @@
-﻿<UserControl x:Class="TrinityCreator.Tools.ProfileCreator.ProfileCreatorEntry"
+﻿<UserControl x:Class="TrinityCreator.Tools.ProfileCreator.ProfileCreatorSetting"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TrinityCreator.Tools.ProfileCreator"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="490">
+             d:DesignHeight="450" d:DesignWidth="800">
     <WrapPanel Orientation="Horizontal">
-        <TextBox Text="{Binding AppKey}" IsReadOnly="True" Width="170" Margin="5" ToolTip="{Binding Tooltip}"/>
-        <TextBox Text="{Binding SqlKey}" IsEnabled="{Binding IsIncluded}"  Width="170" Margin="5" ToolTip="SqlKey - Equivalent column name in your emulator."/>
-        <TextBox Text="{Binding TableName}" IsEnabled="{Binding IsIncluded}" Width="100" Margin="5" ToolTip="Table Name - Use %t for dynamic table names (eg. creature_loot_template should be %t_loot_template"/>
+        <TextBox Text="{Binding SettingKey}" IsReadOnly="True" Width="170" Margin="5" ToolTip="{Binding Tooltip}"/>
+        <TextBox Text="{Binding SettingValue}" IsEnabled="{Binding IsIncluded}"  Width="170" Margin="5"/>
         <CheckBox IsChecked="{Binding IsIncluded}" VerticalAlignment="Center" ToolTip="Uncheck to ignore this AppKey when generating an sql query."/>
     </WrapPanel>
 </UserControl>
