--- a/TrinityCreator/Tools/ProfileCreator/ProfileCreatorWindow.xaml
+++ b/TrinityCreator/Tools/ProfileCreator/ProfileCreatorWindow.xaml
@@ -34,6 +34,16 @@
                     <!-- ProfileCreatorEntries go here -->
                 </StackPanel>
             </GroupBox>
+            <GroupBox Header="Creature" Width="500" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Top">
+                <StackPanel x:Name="creatureSp" Orientation="Vertical">
+                    <!-- ProfileCreatorEntries go here -->
+                </StackPanel>
+            </GroupBox>
+            <GroupBox Header="Lookup Tool" Width="500" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Top">
+                <StackPanel x:Name="lookupToolSp" Orientation="Vertical">
+                    <!-- ProfileCreatorEntries go here -->
+                </StackPanel>
+            </GroupBox>
         </WrapPanel>
     </ScrollViewer>
 </Window>
