--- a/TrinityCreator/Tools/ProfileCreator/ProfileCreatorWindow.xaml
+++ b/TrinityCreator/Tools/ProfileCreator/ProfileCreatorWindow.xaml
@@ -14,6 +14,34 @@
                     <Button Name="copyBtn" Content="Copy Json to clipboard" Margin="5" Height="25" Click="copyBtn_Click"/>
                 </StackPanel>
             </GroupBox>
+            <GroupBox Header="Profile Info" Width="500" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Top">
+                <StackPanel x:Name="profileInfoSp" Orientation="Vertical">
+                    <StackPanel Orientation="Horizontal"  Margin="5" >
+                        <Label Width="150" Content="Profile Name" />
+                        <TextBox Text="{Binding Name}" Width="325" />
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal"  Margin="5" >
+                        <Label Width="150" Content="Emulator Name" />
+                        <TextBox Text="{Binding EmulatorName}" Width="325" />
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal"  Margin="5">
+                        <Label Width="150" Content="Game Version" ToolTip="eg. 3.3.5a or 1.12.2"/>
+                        <TextBox Text="{Binding GameVersion}" Width="325" />
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal"  Margin="5">
+                        <Label Width="150" Content="Database Version" ToolTip="Database version if applicable or the current date."/>
+                        <TextBox Text="{Binding DatabaseVersion}" Width="325" />
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal"  Margin="5">
+                        <Label Width="150" Content="Profile Revision" ToolTip="Increase the revision number to prompt users with an update of this profile."/>
+                        <TextBox Text="{Binding Revision}" Width="325" />
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal"  Margin="5">
+                        <Label Width="150" Content="Author" ToolTip="Name of the profile author."/>
+                        <TextBox Text="{Binding Author}" Width="325" />
+                    </StackPanel>
+                </StackPanel>
+            </GroupBox>
             <GroupBox Header="Loot" Width="500" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Top">
                 <StackPanel x:Name="lootSp" Orientation="Vertical">
                     <!-- ProfileCreatorEntries go here -->
