--- a/TrinityCreator/Tools/ProfileCreator/ProfileCreatorEntry.xaml
+++ b/TrinityCreator/Tools/ProfileCreator/ProfileCreatorEntry.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="490">
     <WrapPanel Orientation="Horizontal">
-        <TextBox Text="{Binding AppKey}" IsReadOnly="True" Width="170" Margin="5" ToolTip="{Binding Tooltip}"/>
+        <TextBox Text="{Binding AppKey}" Name="appKeyTb" IsReadOnly="True" Width="170" Margin="5" ToolTip="{Binding Tooltip}"/>
         <TextBox Text="{Binding SqlKey}" IsEnabled="{Binding IsIncluded}"  Width="170" Margin="5" ToolTip="SqlKey - Equivalent column name in your emulator."/>
         <TextBox Text="{Binding TableName}" IsEnabled="{Binding IsIncluded}" Width="100" Margin="5" ToolTip="Table Name - Use %t for dynamic table names (eg. creature_loot_template should be %t_loot_template"/>
         <CheckBox IsChecked="{Binding IsIncluded}" VerticalAlignment="Center" ToolTip="Uncheck to ignore this AppKey when generating an sql query."/>
