--- a/TrinityCreator/Tools/ProfileCreator/ProfileCreatorWindow.xaml
+++ b/TrinityCreator/Tools/ProfileCreator/ProfileCreatorWindow.xaml
@@ -72,6 +72,15 @@
                     <!-- ProfileCreatorEntries go here -->
                 </StackPanel>
             </GroupBox>
+            <GroupBox Header="Custom Fields" Width="500" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Top">
+                <StackPanel Orientation="Vertical">
+                    <StackPanel x:Name="customFieldsSp" Orientation="Vertical">
+                        <!-- ProfileCreatorEntries go here -->
+
+                    </StackPanel>
+                    <Button x:Name="addCustomFieldBtn" Content="Add Custom Field" Margin="5" Click="addCustomFieldBtn_Click" />
+                </StackPanel>
+            </GroupBox>
         </WrapPanel>
     </ScrollViewer>
 </Window>
