--- a/TrinityCreator/Tools/ProfileCreator/ProfileCreatorWindow.xaml
+++ b/TrinityCreator/Tools/ProfileCreator/ProfileCreatorWindow.xaml
@@ -11,7 +11,11 @@
             <GroupBox Header="Info" Width="1000">
                 <StackPanel Orientation="Vertical">
                     <TextBlock>WARNING: This tool is for advanced users. Read the documentation or <Hyperlink NavigateUri="https://www.youtube.com/watch?v=UNXz33NpTf0" RequestNavigate="Hyperlink_RequestNavigate">watch the video tutorial</Hyperlink> before using it.</TextBlock>
-                    <Button Name="copyBtn" Content="Copy Json to clipboard" Margin="5" Height="25" Click="copyBtn_Click"/>
+                    <StackPanel Orientation="Horizontal">
+                        <Button Name="loadBtn" Content="Load profile from file" Margin="5" Height="25" Width="150" Click="loadBtn_Click"/>
+                        <Button Name="copyBtn" Content="Copy Json to clipboard" Margin="5" Height="25" Width="150" Click="copyBtn_Click"/>
+                        <Button Name="saveBtn" Content="Save To File" Margin="5" Height="25" Width="150" Click="saveBtn_Click"/>
+                    </StackPanel>                    
                 </StackPanel>
             </GroupBox>
             <GroupBox Header="Profile Info" Width="500" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Top">
